Implementado la funcion Eliminar mascotas y usuarios

--- a/src/interfaz/AltaUsuario.form
+++ b/src/interfaz/AltaUsuario.form
@@ -79,10 +79,11 @@
                           <Component id="AddFotoBoton" min="-2" max="-2" attributes="0"/>
                           <Component id="NombreText" alignment="0" min="-2" pref="167" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
+                          <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="211" max="-2" attributes="0"/>
                               <Component id="Titulo" min="-2" max="-2" attributes="0"/>
                           </Group>
@@ -93,10 +94,10 @@
                               <Component id="BotonRegistrar" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="0" pref="77" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="326" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="304" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
