--- a/src/interfaz/registroActividadPeriodica.form
+++ b/src/interfaz/registroActividadPeriodica.form
@@ -247,6 +247,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="diferenciaDias">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="diferenciaDiasKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="atras">
       <Properties>
